--- a/leistungen.html
+++ b/leistungen.html
@@ -48,42 +48,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     }
     .service-category:first-child { margin-top: 0; }
   </style>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "AutoBodyShop",
-  "name": "EmreDetails",
-  "image": "https://emredetails.de/logo.png",
-  "url": "https://emredetails.de",
-  "telephone": "+491714745229",
-  "priceRange": "€€€",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Benzstr. 15b",
-    "addressLocality": "Marl",
-    "postalCode": "45768",
-    "addressRegion": "NRW",
-    "addressCountry": "DE"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": 51.6617,
-    "longitude": 7.0981
-  },
-  "knowsAbout": [
-    "Fahrzeugaufbereitung Marl",
-    "9H Keramikversiegelung Recklinghausen",
-    "Gelsenkirchen Detailing",
-    "DetailHQ Workflow Management",
-    "Prozesssichere Schadensdokumentation"
-  ],
-  "memberOf": {
-    "@type": "Organization",
-    "name": "DetailHQ Quality Network",
-    "url": "https://detailhq.de"
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AutoBodyShop",
+    "name": "EmreDetails",
+    "image": "https://emredetails.de/img/logo.png",
+    "url": "https://emredetails.de",
+    "telephone": "+491714745229",
+    "priceRange": "€€€",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Benzstr. 15b",
+      "addressLocality": "Marl",
+      "postalCode": "45768",
+      "addressRegion": "NRW",
+      "addressCountry": "DE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 51.6617,
+      "longitude": 7.0981
+    },
+    "knowsAbout": [
+      "Fahrzeugaufbereitung Marl",
+      "9H Keramikversiegelung Recklinghausen",
+      "Gelsenkirchen Detailing",
+      "Lackkorrektur & Politur",
+      "DetailHQ zertifizierte Dokumentation"
+    ],
+    "memberOf": {
+      "@type": "Organization",
+      "name": "DetailHQ Quality Network",
+      "url": "https://detailhq.de"
+    }
   }
-}
-</script>
+  </script>
 </head>
 
 <body>
